[tool.poetry]
name = "fastapi-pagination-youtube"
version = "0.1.0"
description = ""
authors = ["Diogo Duarte <duartediogo98@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_pagination_youtube"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
sqlalchemy = "^2.0.8"
fastapi-pagination = "^0.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
